tests/core/ill-typed/unexpected-type-for-expression/argument-type-mismatch-1.stella
language core;

fn main(n : Nat) -> Nat {
  return (fn(x : Bool) { return fn(y : Nat) { return succ(y); }; })(0)(false);
}